--- a/index.html
+++ b/index.html
@@ -3,10 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard</title>
+    <title>Game Leaderboard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #111;
+            color: #fff;
+            text-align: center;
+        }
+        h1 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+        table {
+            width: 80%;
+            margin: auto;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #fff;
+        }
+        th {
+            background: #222;
+            font-size: 14px;
+            text-transform: uppercase;
+        }
+        tr:nth-child(odd) {
+            background: #1b1b1b;
+        }
+        tr:nth-child(even) {
+            background: #292929;
+        }
+    </style>
 </head>
 <body>
     <h1>Game Leaderboard</h1>
-    <p>This is a placeholder file. The leaderboard will load soon.</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Rank</th>
+                <th>Type</th>
+                <th>Handle</th>
+                <th>Team</th>
+                <th>Player Number</th>
+                <th>Score</th>
+            </tr>
+        </thead>
+        <tbody id="leaderboard">
+            <!-- Data will load here -->
+        </tbody>
+    </table>
+
+    <script>
+        async function loadLeaderboard() {
+            const response = await fetch('https://script.google.com/macros/s/AKfycbyDk_Uj1oMPW5h1Pe4dgSHpZ_Qfjd3rVm5xipbMggSP09saefW_kv1_mdR-7n_FNAPJ/exec');
+            const data = await response.json();
+
+            let leaderboardHTML = '';
+            data.forEach((row, index) => {
+                leaderboardHTML += `
+                    <tr>
+                        <td>${index + 1}</td>
+                        <td>${row.type}</td>
+                        <td>${row.handle}</td>
+                        <td>${row.team}</td>
+                        <td>${row.playerNumber}</td>
+                        <td>${row.score}</td>
+                    </tr>`;
+            });
+
+            document.getElementById("leaderboard").innerHTML = leaderboardHTML;
+        }
+
+        loadLeaderboard();
+        setInterval(loadLeaderboard, 10000); // Refresh every 10 seconds
+    </script>
 </body>
 </html>
