--- a/index.html
+++ b/index.html
@@ -56,35 +56,28 @@
     </table>
 
     <script>
-        // Function to load leaderboard data
-        async function loadLeaderboard() {
-            // Google Apps Script Web App URL
-            const response = await fetch('https://script.google.com/macros/s/AKfycbyDk_Uj1oMPW5h1Pe4dgSHpZ_Qfjd3rVm5xipbMggSP09saefW_kv1_mdR-7n_FNAPJ/exec');
-            const data = await response.json();
+       async function loadLeaderboard() {
+    const response = await fetch('https://script.google.com/macros/s/AKfycbwGnDU1plWMHMDiTO1iJlKsfGhUXnFOqw289306aOYY44N-FZ-FGtBPTZZBdD4dAgmu/exec');
+    const data = await response.json();
 
-            // Generate leaderboard rows
-            let leaderboardHTML = '';
-            data.forEach((row) => {
-                leaderboardHTML += `
-                    <tr>
-                        <td>${row.type}</td>
-                        <td>${row.handle}</td>
-                        <td>${row.team}</td>
-                        <td>${row.playerNumber}</td>
-                        <td>${row.rank}</td>
-                        <td>${row.score}</td>
-                    </tr>`;
-            });
+    let leaderboardHTML = '';
+    data.forEach((row) => {
+        leaderboardHTML += `
+            <tr>
+                <td>${row.type}</td>
+                <td>${row.handle}</td>
+                <td>${row.team}</td>
+                <td>${row.playerNumber}</td>
+                <td>${row.rank}</td>
+                <td>${row.score}</td>
+            </tr>`;
+    });
 
-            // Update the table
-            document.getElementById("leaderboard").innerHTML = leaderboardHTML;
-        }
+    document.getElementById("leaderboard").innerHTML = leaderboardHTML;
+}
 
-        // Load leaderboard on page load
-        loadLeaderboard();
-
-        // Auto-refresh every 10 seconds
-        setInterval(loadLeaderboard, 10000);
+loadLeaderboard();
+setInterval(loadLeaderboard, 10000); // Refresh every 10 seconds
     </script>
 </body>
 </html>
