--- a/index.html
+++ b/index.html
@@ -5,35 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Leaderboard</title>
     <style>
+        /* General Styling */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #111;
+            font-family: 'Arial', sans-serif;
+            background-color: #1a001a; /* Cyber Purple */
             color: #fff;
+            margin: 0;
+            padding: 0;
             text-align: center;
         }
+
         h1 {
-            font-size: 32px;
-            margin-bottom: 20px;
+            font-size: 36px;
+            margin: 20px 0;
+            color: #e91e63; /* Bright accent */
+            text-shadow: 0 0 10px #e91e63, 0 0 20px #ff00ff; /* Neon glow */
         }
+
+        /* Table Styling */
         table {
-            width: 80%;
-            margin: auto;
+            width: 90%;
+            margin: 20px auto;
             border-collapse: collapse;
+            background: #2d003d; /* Darker purple */
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
+
         th, td {
-            padding: 10px;
-            border: 1px solid #fff;
+            padding: 15px;
+            text-align: center;
         }
+
         th {
-            background: #222;
-            font-size: 14px;
+            background: #6a0080; /* Mid purple */
+            color: #fff;
             text-transform: uppercase;
+            font-size: 14px;
         }
-        tr:nth-child(odd) {
-            background: #1b1b1b;
+
+        td {
+            background: #1a001a; /* Cyber Purple */
+            color: #fff;
+            font-size: 16px;
         }
-        tr:nth-child(even) {
-            background: #292929;
+
+        /* Row Hover Effect */
+        tr:hover td {
+            background: #ff00ff; /* Bright hover color */
+            color: #000;
+            transition: background 0.3s, color 0.3s;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            th, td {
+                font-size: 14px;
+                padding: 10px;
+            }
+
+            h1 {
+                font-size: 28px;
+            }
         }
     </style>
 </head>
