--- a/index.html
+++ b/index.html
@@ -3,37 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Overview</title>
-    <link rel="stylesheet" href="styles/leaderboard.css">
+    <title>Leaderboard</title>
+    <script src="script.js" defer></script>
+    <style>
+        body { font-family: Arial, sans-serif; background-color: black; color: cyan; text-align: center; }
+        table { width: 80%; margin: auto; border-collapse: collapse; }
+        th, td { border: 1px solid cyan; padding: 10px; }
+        select { margin-bottom: 20px; padding: 10px; }
+    </style>
 </head>
 <body>
-    <h1>Game Overview</h1>
-    <h2>Top Leaders</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Rank</th>
-                <th>Name</th>
-                <th>House</th>
-                <th>Score</th>
-            </tr>
-        </thead>
-        <tbody id="overview-leaderboard">
-            <!-- Top leader data will load here -->
-        </tbody>
-    </table>
+    <h1>Leaderboard</h1>
+    <label for="house-select">Select Your House:</label>
+    <select id="house-select">
+        <option value="">Select</option>
+        <option value="HOUSE ONE">House 1</option>
+        <option value="HOUSE TWO">House 2</option>
+        <option value="HOUSE THREE">House 3</option>
+    </select>
 
-    <h2>View House Leaderboards</h2>
-    <ul>
-        <li><a href="house1.html">House 1 Leaderboard</a></li>
-        <li><a href="house2.html">House 2 Leaderboard</a></li>
-        <li><a href="house3.html">House 3 Leaderboard</a></li>
-    </ul>
+    <div id="overview-leaderboard"></div>
+    <div id="house-house-one" style="display: none;"></div>
+    <div id="house-house-two" style="display: none;"></div>
+    <div id="house-house-three" style="display: none;"></div>
 
-    <script src="scripts/leaderboard.js"></script>
     <script>
-        // Fetch and display overall leaders
-        loadOverviewLeaderboard();
+        // Show only the selected house's leaderboard
+        document.getElementById("house-select").addEventListener("change", function() {
+            document.getElementById("house-house-one").style.display = "none";
+            document.getElementById("house-house-two").style.display = "none";
+            document.getElementById("house-house-three").style.display = "none";
+
+            const selectedHouse = this.value.toLowerCase().replace(" ", "-");
+            if (selectedHouse) document.getElementById(`house-${selectedHouse}`).style.display = "block";
+        });
     </script>
 </body>
 </html>
