--- a/index.html
+++ b/index.html
@@ -9,18 +9,10 @@
         body { font-family: Arial, sans-serif; background-color: black; color: cyan; text-align: center; }
         table { width: 80%; margin: auto; border-collapse: collapse; }
         th, td { border: 1px solid cyan; padding: 10px; }
-        select { margin-bottom: 20px; padding: 10px; }
     </style>
 </head>
 <body>
     <h1>Leaderboard</h1>
-    <label for="house-select">Select Your House:</label>
-    <select id="house-select">
-        <option value="">Select</option>
-        <option value="HOUSE ONE">House 1</option>
-        <option value="HOUSE TWO">House 2</option>
-        <option value="HOUSE THREE">House 3</option>
-    </select>
 
     <div id="overview-leaderboard"></div>
     <div id="house-house-one" style="display: none;"></div>
@@ -28,15 +20,20 @@
     <div id="house-house-three" style="display: none;"></div>
 
     <script>
-        // Show only the selected house's leaderboard
-        document.getElementById("house-select").addEventListener("change", function() {
-            document.getElementById("house-house-one").style.display = "none";
-            document.getElementById("house-house-two").style.display = "none";
-            document.getElementById("house-house-three").style.display = "none";
+        function getURLParameter(name) {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get(name);
+        }
 
-            const selectedHouse = this.value.toLowerCase().replace(" ", "-");
-            if (selectedHouse) document.getElementById(`house-${selectedHouse}`).style.display = "block";
-        });
+        // Read the "house" parameter from the URL
+        const house = getURLParameter("house");
+        if (house) {
+            const houseId = `house-${house.toLowerCase().replace(" ", "-")}`;
+            document.getElementById("overview-leaderboard").style.display = "block";
+            document.getElementById(houseId).style.display = "block";
+        } else {
+            document.getElementById("overview-leaderboard").style.display = "block";
+        }
     </script>
 </body>
 </html>
