--- a/houses/house1.html
+++ b/houses/house1.html
@@ -12,7 +12,7 @@
         <h1>🏠 House 1 Leaderboard</h1>
         <div id="house1-leaderboard"></div>
     </div>
-
+<script src="../scripts/script.js" defer></script>
     <script>
         fetchLeaderboard("house", "HOUSE ONE");
         setInterval(() => fetchLeaderboard("house", "HOUSE ONE"), 10000);
