--- a/houses/house1.html
+++ b/houses/house1.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House 1 Leaderboard</title>
     <link rel="stylesheet" href="../styles/style.css">
-    <script src="../scripts/script.js" defer></script>
+    <script src="../scripts/script.js" defer></script> <!-- Keep only this one -->
 </head>
 <body>
     <div class="container">
         <h1>🏠 House 1 Leaderboard</h1>
         <div id="house1-leaderboard"></div>
     </div>
-<script src="../scripts/script.js" defer></script>
+
     <script>
         fetchLeaderboard("house", "HOUSE ONE");
         setInterval(() => fetchLeaderboard("house", "HOUSE ONE"), 10000);
