--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard Overview</title>
+    <title>Leaderboard</title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <h1>Leaderboard Overview</h1>
-        <div id="overview-leaderboard"></div>
+        <h1 id="leaderboard-title">Leaderboard</h1>
+        <div id="leaderboard"></div>
     </div>
 
     <script>
-        fetchLeaderboard("overview");
-        setInterval(() => fetchLeaderboard("overview"), 10000);
+        // Detect house from URL (default to Overview)
+        const params = new URLSearchParams(window.location.search);
+        const house = params.get("house") || "S4 OVERVIEW"; // Default is Overview
+
+        document.getElementById("leaderboard-title").textContent = house === "S4 OVERVIEW" ? "🏆 Overview Leaderboard" : `🏠 ${house} Leaderboard`;
+        fetchLeaderboard(house);
     </script>
 </body>
 </html>
- 
