--- a/index.html
+++ b/index.html
@@ -3,28 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="scripts/script.js"></script>
+    <title>Cyberpunk Leaderboard</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>🏆 Leaderboard</h1>
-        <table id="leaderboard">
-            <thead>
-                <tr>
-                    <th>Type</th>
-                    <th>Handle</th>
-                    <th>Team</th>
-                    <th>Weapons</th>
-                    <th>Player #</th>
-                    <th>Score</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </div>
+    <h1>Cyberpunk Leaderboard</h1>
+    <table id="leaderboard">
+        <thead>
+            <tr>
+                <th>Type</th>
+                <th>Handle</th>
+                <th>Team</th>
+                <th>Tr</th>
+                <th>Weapons</th>
+                <th>Player #</th>
+                <th>Score</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
- 
- 
