--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyberpunk Leaderboard</title>
+    <title>Post Apocalyptic Los Angeles 4 Leaderboard</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
