--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Cyberpunk Leaderboard</h1>
+    <h1>Post Apocalyptic Los Angeles 4 Leaderboard</h1>
     <table id="leaderboard">
         <thead>
             <tr>
