--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post Apocalyptic Los Angeles 4 Leaderboard</title>
-<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+<link rel="icon" type="image/x-icon" href="s4_134d3rb04rd/assets/favicon.ico">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
